# ROSA-code-cpp

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  deps_version.sh  prepare.sh  run-clang-tidy.sh  simulator_config.h.in
.github/workflows/: cmake-multi-platform.yml
sample_maps/: 4walls_1table_flat.json  multiple_walls_1ball.json  single_ball.json  two_balls.json
src/: config.cpp  config.hpp
src/common/: arg_parser.hpp  constants.hpp  logger.hpp  util.cpp  util.hpp
src/e2e-tests/: freespace_motion_test.cpp
src/simulator/: ball.cpp  ball.hpp  beam.hpp  box.hpp  bumper_sensor.hpp  cube.cpp  cube.hpp  cylinder.cpp  cylinder.hpp  intersection_instance.cpp  intersection_instance.hpp  map.cpp  map.hpp  non_physical_object.hpp  object.cpp  object.hpp  object_registry.hpp  physical_object.cpp  physical_object.hpp  position.hpp  rigid_physical_obj.cpp  rigid_physical_obj.hpp  robot.hpp  run_simulator.cpp  sensor.hpp  shape.hpp  shapeless.hpp  sphere.cpp  sphere.hpp  vacuum_cleaner.cpp  vacuum_cleaner.hpp  velocity.hpp  world.cpp  world.hpp
src/simulator/objects/: ball.cpp  ball.hpp  box.hpp
src/simulator/shapes/: cube.cpp  cube.hpp  cylinder.cpp  cylinder.hpp
src/utils/: constants.hpp  util.hpp
